--- a/still.css
+++ b/still.css
@@ -25,7 +25,7 @@ h1, h2{
 
 span {color: rgb(255,0,255);}
 	.pozadina{
-	background-image: url("D:/FAKS/DM/html/slike/3.png");
+	background-image: url("3.png");
 }
 	.drugapozadina {
 		background-color: darkgray;
@@ -43,3 +43,4 @@ a:hover{
 img {
 	height: 200px;
 }
+
